--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Padaria Doce Pão</h1>
+        <h1>Matos docerias</h1>
         <nav>
             <ul>
                 <li><a href="#historia">História</a></li>
@@ -19,10 +19,7 @@
 
     <section id="historia">
         <h2>Nossa História</h2>
-        <p>A Padaria Doce Pão foi fundada em 1985 por Dona Maria e seu esposo João. Desde então, 
-           nossa missão tem sido levar aos nossos clientes os melhores pães, bolos e quitutes, 
-           preparados com amor e ingredientes de qualidade. Ao longo dos anos, nos tornamos um ponto de encontro 
-           da comunidade, um lugar onde o aroma de pão fresco convida a todos para momentos de sabor e felicidade.</p>
+        <p>A Matos docerias foi criada nos anos 2000, com o intuito de agradar os nossos clientes com diversas opções de doces muitos gostosos, foi planejada por mim como uma renda para cuidar dos meus filhos e para eu conseguir comprar minha fazenda bem no meio do mato, então juntei meus dons com a culinária e formei minha doceria.</p>
     </section>
 
     <section id="cardapio">
@@ -30,7 +27,7 @@
         <div class="menu">
             <div class="item">
                 <img src="b8bdddabafd4892124d854dfecdb4a63.jpg"
-                <h3>Pão artesanal</h3>
+                <h3>Delicias chocoma é um bolo de massa de chocolate com bastante recheio de maracuja com cobertura de chocolate meio amargo e com raspas da semente do maracuja por cima</h3>
                 <p>R$10,00</p>
             </div>
             <div class="item">
