--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Padaria Doce Pão</title>
+    <title>Matos docerias</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -27,39 +27,39 @@
         <div class="menu">
             <div class="item">
                 <img src="b8bdddabafd4892124d854dfecdb4a63.jpg"
-                <h3>Delicias chocoma é um bolo de massa de chocolate com bastante recheio de maracuja com cobertura de chocolate meio amargo e com raspas da semente do maracuja por cima</h3>
-                <p>R$10,00</p>
+                <h3>Delicias chocoma é um bolo de massa de chocolate com bastante recheio de maracuja com cobertura de chocolate ao leite e com raspas da semente do maracuja por cima</h3>
+                <p>R$25,00</p>
             </div>
             <div class="item">
                 <img src="bolo-chocolate.png"
-                <h3>Bolo de chocolate</h3>
+                <h3>Bolo de Red Velvet</h3>
                 <p>R$25,00</p>
             </div>
             <div class="item">
                 <img src="istockphoto-1091734322-612x612.jpg"
-                <h3>Croissant</h3>
-                <p>R$12,00</p>
+                <h3>torta de morango</h3>
+                <p>R$15,00</p>
             </div>
             <div class="item">
                 <img src="depositphotos_21727333-stock-photo-espresso-cup-isolated-on-white.jpg"
                 <h3>Café espresso</h3>
-                <p>R$5,00</p>
+                <p>R$6,00</p>
             </div>
             <div class="item">
                 <img src="suco.jpg"
-                <h3>Suco natural</h3>
-                <p>R$7,00</p>
+                <h3>browni</h3>
+                <p>R$10,00</p>
             </div>
             <div class="item">
                 <img src="cappuccino.jpg"
                 <h3>Capuccino</h3>
-                <p>R$8,00</p>
+                <p>R$9,00</p>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 Padaria Doce Pão. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Matos docerias. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
