--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
         <h2>Nosso Cardápio</h2>
         <div class="menu">
             <div class="item">
-                <img src="b8bdddabafd4892124d854dfecdb4a63.jpg"
+                <img src="Captura de tela_2025-07-28_15-59-05.png"
                 <h3>Delicias chocoma é um bolo de massa de chocolate com bastante recheio de maracuja com cobertura de chocolate ao leite e com raspas da semente do maracuja por cima</h3>
                 <p>R$25,00</p>
             </div>
             <div class="item">
-                <img src="bolo-chocolate.png"
+                <img src="Captura de tela_2025-07-28_15-56-28.png"
                 <h3>Bolo de Red Velvet</h3>
                 <p>R$25,00</p>
             </div>
             <div class="item">
-                <img src="istockphoto-1091734322-612x612.jpg"
+                <img src="torta-morango-com-chantilly.jpg"
                 <h3>torta de morango</h3>
                 <p>R$15,00</p>
             </div>
             <div class="item">
-                <img src="depositphotos_21727333-stock-photo-espresso-cup-isolated-on-white.jpg"
+                <img src="café-expresso.png"
                 <h3>Café espresso</h3>
                 <p>R$6,00</p>
             </div>
             <div class="item">
-                <img src="suco.jpg"
+                <img src=""
                 <h3>browni</h3>
                 <p>R$10,00</p>
             </div>
