--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 <p>R$6,00</p>
             </div>
             <div class="item">
-                <img src=""
+                <img src="belga-1-800x640.jpg"
                 <h3>browni</h3>
                 <p>R$10,00</p>
             </div>
             <div class="item">
-                <img src="cappuccino.jpg"
+                <img src="exps37407_THE1213734_37407_WEB.jpg"
                 <h3>Capuccino</h3>
                 <p>R$9,00</p>
             </div>
